__before_move/old/_very_old/podsync/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: podsync
  name: podsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podsync
  template:
    metadata:
      labels:
        app: podsync
    spec:
      containers:
        - image: ghcr.io/tuxpeople/podsync:v2.4.2
          imagePullPolicy: Always
          name: podsync
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 200Mi
          volumeMounts:
            - mountPath: /app/config.toml
              name: podsync-config
              subPath: config.toml
            - mountPath: /app/data/
              name: podsync-data
      volumes:
        - configMap:
            items:
              - key: config.toml
                mode: 420
                path: config.toml
            name: podsync-config
          name: podsync-config
        - name: podsync-data
          persistentVolumeClaim:
            claimName: podsync-data-pvc
